Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105332

QCommonStyle Missing drawComplexControl() case implementation for CC_ComboBox

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P4: Low P4: Low
    • 6.5.0 Beta1
    • 6.2.3, 6.3.1
    • Widgets: Styles
    • None
    • Any
    • Windows
    • 75d4958e50 (qt/qtbase/dev) 75d4958e50 (qt/tqtc-qtbase/dev) 75d4958e50 (qt/qtbase/wip/protobuf) 75d4958e50 (qt/tqtc-qtbase/wip/protobuf)

      Hello Qt Support

      Whenever a custom (QStyle) style is created subclassing QCommonStyle, there is a qWarning error that pops up constantly in the Application Output when interacting with any and all Combo-boxes:

      "QCommonStyle::drawComplexControl: Control 1 not handled"

      When using QProxyStyle the issue isn't there because the QWindowsStyle overrides drawComplexControl in which CC_ComboBox is present in the switch - which is why the styles example works without fault. but if you were to change the QProxyStyle subclass to a QCommonStyle subclass instead, then the warnings are present whenever clicking/hovering the combobox,

      its problematic because it floods the Application Output with constant meaningless warnings (and we need that not to occur for debugging purposes)

      For now I'll just continue creating my custom style with QProxyStyle but I just thought I'd make you aware of the minor error in QCommonStyle's .cpp file.

      (No code/attachments to link as its basically the styles example except subclassing QCommonStyle if you wanted to witness the error in action. And its a matter of simply viewing/adjusting the QCommonStyle.cpp file, specifically the drawComplexControl function in order to add a CC_ComboBox case instance [even if it does virtually nothing], as to avoid the default error)
      _____________________________________________________________________________________________

      Also just a general question while I'm here - how much of a performance difference does QStyle make by using it instead of mass producing QSS setStyleSheet calls? (Performance is a high priority for my app which is why I'm dabbling in QStyle even though it's more tedious to write) Is QStyle significantly more performant?

      Kind Regards,
      Liam

        For Gerrit Dashboard: QTBUG-105332
        # Subject Branch Project Status CR V

            tpochep Timur Pocheptsov
            lc12345 Liam Corbett
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes