QCommonStyle: use logging categories

Use qCWarning instead of qWarning, to give users more control over
debug output if needed.

Fixes: QTBUG-105332
Change-Id: I830dd160f75eb9885d80b80336bfb27da676e4bc
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>